[gd_scene load_steps=24 format=2]

[ext_resource path="res://assets/game/dropshadow.png" type="Texture" id=1]
[ext_resource path="res://assets/enemies/spider.png" type="Texture" id=2]
[ext_resource path="res://scenes/Spider.gd" type="Script" id=3]
[ext_resource path="res://sounds/fx/spider_hit.mp3" type="AudioStream" id=4]
[ext_resource path="res://sounds/fx/poof.wav" type="AudioStream" id=5]
[ext_resource path="res://sounds/fx/spiderwalk.mp3" type="AudioStream" id=6]
[ext_resource path="res://assets/enemies/spiderpeg.png" type="Texture" id=7]
[ext_resource path="res://assets/enemies/spiderhead.png" type="Texture" id=8]
[ext_resource path="res://sounds/punch.wav" type="AudioStream" id=9]

[sub_resource type="CircleShape2D" id=37]
radius = 8.0

[sub_resource type="Shader" id=43]
code = "shader_type canvas_item;

uniform bool active = false;

void fragment() {
	vec4 previous_color = texture(TEXTURE, UV);
	vec4 white_color = vec4(1.0, 1.0, 1.0, previous_color.a);
	vec4 new_color = previous_color;
	if (active == true)
	{
		new_color = white_color
	}
	COLOR = new_color;
}"

[sub_resource type="ShaderMaterial" id=44]
shader = SubResource( 43 )
shader_param/active = false

[sub_resource type="AtlasTexture" id=38]
flags = 2
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 17, 16 )

[sub_resource type="AtlasTexture" id=39]
flags = 2
atlas = ExtResource( 2 )
region = Rect2( 17, 0, 17, 16 )

[sub_resource type="AtlasTexture" id=40]
flags = 2
atlas = ExtResource( 2 )
region = Rect2( 0, 16, 17, 16 )

[sub_resource type="AtlasTexture" id=41]
flags = 2
atlas = ExtResource( 2 )
region = Rect2( 17, 16, 17, 16 )

[sub_resource type="SpriteFrames" id=42]
animations = [ {
"frames": [ SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Curve" id=46]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 360 ), 0.0, 0.0, 0, 0, Vector2( 1, 216.818 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 46 )

[sub_resource type="Curve" id=47]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 47 )

[sub_resource type="ParticlesMaterial" id=48]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 107.84
initial_velocity_random = 1.0
angular_velocity_curve = SubResource( 6 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 56.86
scale_curve = SubResource( 7 )

[sub_resource type="Animation" id=45]
resource_name = "hit"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false ]
}

[node name="Spider" type="Area2D" groups=["damagable"]]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 37 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 44 )
scale = Vector2( 0.970588, 1 )
frames = SubResource( 42 )
playing = true

[node name="Dropshadow" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.333333 )
show_behind_parent = true
position = Vector2( 0, 8 )
scale = Vector2( 0.3125, 0.125 )
texture = ExtResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
lifetime = 2.0
one_shot = true
explosiveness = 1.0
process_material = SubResource( 48 )
texture = ExtResource( 7 )

[node name="Particles2D2" type="Particles2D" parent="."]
emitting = false
amount = 2
lifetime = 2.0
one_shot = true
explosiveness = 1.0
process_material = SubResource( 48 )
texture = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hit = SubResource( 45 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 5.0
pitch_scale = 1.1

[node name="AudioStreamPlayer2D_Death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
volume_db = -5.0
pitch_scale = 1.1

[node name="AudioStreamPlayer2D_Whoosh" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -16.71
pitch_scale = 1.43

[node name="AudioStreamPlayer2D_Spider" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = 14.733
pitch_scale = 1.3
